--- a/tests/test_loss_config.yaml
+++ b/tests/test_loss_config.yaml
@@ -7,5 +7,24 @@ log_rank_loss1:
       gamma: 130
       temp: 0.5
       args:
-        attr1: 0.4
-        attr2: True
+        reduction: 'mean'
+
+cross_entropy_loss1:
+  task:
+    device: cpu
+  train:
+    loss:
+      type: cross_entropy_loss
+      args: ~
+
+margin_rank_loss1:
+  task:
+    device: cpu
+  train:
+    loss:
+      type: margin_ranking_loss
+      margin: 100
+      args: ~
+
+
+
