--- a/config-desimple.yaml
+++ b/config-desimple.yaml
@@ -122,11 +122,12 @@ model:
 
 
 negative_sampling:
-  name: 'time_agnostic'
+  type: 'time_agnostic'
   num_samples: 500
   filter: False
   as_matrix: True
   target: both
+  args: ~
 
 
 ## TRAINING ####################################################################
