--- a/config-pipeline.yaml
+++ b/config-pipeline.yaml
@@ -7,7 +7,7 @@ console:
 task:
   type: train
   device: 'cpu'
-  reciprocal_relation: False
+  reciprocal_training: False
 
 random_seed:
   default: -1
@@ -27,8 +27,8 @@ dataset:
   filter: False
   temporal:
     resolution: "day"
-    index: True
-    float: False
+    index: False
+    float: Index
   args: ~
 
   name: 'icews14'
@@ -52,23 +52,59 @@ model:
     entity:
       pos_aware: True
       keys:
-        real: 100
+        ent_embs:
+          dim: 32
+          init: xavier_uniform
+        amps_y:
+          dim: 68
+          init: xavier_uniform
+        amps_m:
+          dim: 68
+          init: xavier_uniform
+        amps_d:
+          dim: 68
+          init: xavier_uniform
+        freq_y:
+          dim: 68
+          init: xavier_uniform
+        freq_m:
+          dim: 68
+          init: xavier_uniform
+        freq_d:
+          dim: 68
+          init: xavier_uniform
+        phi_y:
+          dim: 68
+          init: xavier_uniform
+        phi_m:
+          dim: 68
+          init: xavier_uniform
+        phi_d:
+          dim: 68
+          init: xavier_uniform
+
+#        real: 100
+
     relation:
       keys:
-        real: 100
+        real:
+          dim: 100
+          init: xavier_uniform
     # if temporal: ~ then we use float, otherwise we use the index
-    temporal:
-      keys:
-        real: 100
+    temporal: ~
+#      keys:
+#        real: 100
   fusion:
-    type: addition_fusion
-    target: 'rel+temp'
+    type: diachronic_entity_fusion
+    target: 'ent+temp'
     args: ~
   transformation:
-    type: translation_tf
+    type: distmult_tf
     gamma: 100
     p: 1
     args: ~
+  scorer:
+    inverse: True
 
   args: ~
 
