--- a/config-pipeline.yaml
+++ b/config-pipeline.yaml
@@ -1,12 +1,12 @@
 console:
   quiet: False
-  folder: /Users/GengyuanMax/workplace/logging/pipeline
+  folder: ~/gengyuan/logging/pipeline
   format: {}
 
 #local
 task:
   type: train
-  device: 'cpu'
+  device: 'cuda'
   reciprocal_training: False
 
 random_seed:
@@ -19,7 +19,7 @@ random_seed:
 
 # local
 dataset:
-  folder: '/Users/GengyuanMax/workspace/tkg-framework/data/icews14'
+  folder: /home/ubuntu/gengyuan/tkg-framework/data/icews14
 
   # indexes mapping [false, true]
   # TODO 可以保存到cache
@@ -27,8 +27,8 @@ dataset:
   filter: False
   temporal:
     resolution: "day"
-    index: False
-    float: Index
+    index: True
+    float: False
   args: ~
 
   name: 'icews14'
@@ -52,56 +52,73 @@ model:
     entity:
       pos_aware: True
       keys:
-        ent_embs:
-          dim: 32
+        real:
+          dim: 100
           init: xavier_uniform
-        amps_y:
-          dim: 68
+        imag:
+          dim: 100
           init: xavier_uniform
-        amps_m:
-          dim: 68
-          init: xavier_uniform
-        amps_d:
-          dim: 68
-          init: xavier_uniform
-        freq_y:
-          dim: 68
-          init: xavier_uniform
-        freq_m:
-          dim: 68
-          init: xavier_uniform
-        freq_d:
-          dim: 68
-          init: xavier_uniform
-        phi_y:
-          dim: 68
-          init: xavier_uniform
-        phi_m:
-          dim: 68
-          init: xavier_uniform
-        phi_d:
-          dim: 68
-          init: xavier_uniform
+#        ent_embs:
+#          dim: 32
+#          init: xavier_uniform
+#        amps_y:
+#          dim: 68
+#          init: xavier_uniform
+#        amps_m:
+#          dim: 68
+#          init: xavier_uniform
+#        amps_d:
+#          dim: 68
+#          init: xavier_uniform
+#        freq_y:
+#          dim: 68
+#          init: xavier_uniform
+#        freq_m:
+#          dim: 68
+#          init: xavier_uniform
+#        freq_d:
+#          dim: 68
+#          init: xavier_uniform
+#        phi_y:
+#          dim: 68
+#          init: xavier_uniform
+#        phi_m:
+#          dim: 68
+#          init: xavier_uniform
+#        phi_d:
+#          dim: 68
+#          init: xavier_uniform
 
 #        real: 100
 
     relation:
       keys:
         real:
+          dim: 68
+          init: xavier_uniform
+#        imag:
+#          dim: 100
+#          init: xavier_uniform
+    # if temporal: ~ then we use float, otherwise we use the index
+    temporal:
+      keys:
+        real:
+          dim: 32
+          init: xavier_uniform
+        imag:
           dim: 100
           init: xavier_uniform
-    # if temporal: ~ then we use float, otherwise we use the index
-    temporal: ~
-#      keys:
-#        real: 100
+
   fusion:
-    type: diachronic_entity_fusion
-    target: 'ent+temp'
+    type: concatenate_fusion
+    target:
+      - 'rel+temp'
     args: ~
   transformation:
-    type: distmult_tf
+    type: rotation_tf
     gamma: 100
     p: 1
+    range: 10
     args: ~
   scorer:
     inverse: True
@@ -161,8 +178,8 @@ train:
   trace_level: epoch           # batch, epoch
 
   checkpoint:
-    folder: /Users/GengyuanMax/workplace/ckpt/
-    every: 1
+    folder: /home/ubuntu/gengyuan/ckpt/
+    every: 10
     keep: 3
 
   auto_correct: False
