--- a/config-pipeline-simple.yaml
+++ b/config-pipeline-simple.yaml
@@ -27,8 +27,8 @@ dataset:
   filter: False
   temporal:
     resolution: "day"
-    index: False
-    float: True
+    index: True
+    float: False
   args: ~
 
   name: 'icews14'
@@ -52,42 +52,42 @@ model:
     entity:
       pos_aware: True
       keys:
-#        real:
-#          dim: 100
-#          init: xavier_uniform
+        real:
+          dim: 100
+          init: xavier_uniform
 #        imag:
 #          dim: 100
 #          init: xavier_uniform
-        ent_embs:
-          dim: 68
-          init: xavier_uniform
-        amps_y:
-          dim: 32
-          init: xavier_uniform
-        amps_m:
-          dim: 32
-          init: xavier_uniform
-        amps_d:
-          dim: 32
-          init: xavier_uniform
-        freq_y:
-          dim: 32
-          init: xavier_uniform
-        freq_m:
-          dim: 32
-          init: xavier_uniform
-        freq_d:
-          dim: 32
-          init: xavier_uniform
-        phi_y:
-          dim: 32
-          init: xavier_uniform
-        phi_m:
-          dim: 32
-          init: xavier_uniform
-        phi_d:
-          dim: 32
-          init: xavier_uniform
+#        ent_embs:
+#          dim: 68
+#          init: xavier_uniform
+#        amps_y:
+#          dim: 32
+#          init: xavier_uniform
+#        amps_m:
+#          dim: 32
+#          init: xavier_uniform
+#        amps_d:
+#          dim: 32
+#          init: xavier_uniform
+#        freq_y:
+#          dim: 32
+#          init: xavier_uniform
+#        freq_m:
+#          dim: 32
+#          init: xavier_uniform
+#        freq_d:
+#          dim: 32
+#          init: xavier_uniform
+#        phi_y:
+#          dim: 32
+#          init: xavier_uniform
+#        phi_m:
+#          dim: 32
+#          init: xavier_uniform
+#        phi_d:
+#          dim: 32
+#          init: xavier_uniform
 
     relation:
       keys:
@@ -98,19 +98,19 @@ model:
 #          dim: 100
 #          init: xavier_uniform
     # if temporal: ~ then we use float, otherwise we use the index
-    temporal: ~
-#      keys:
-#        real:
-#          dim: 32
-#          init: xavier_uniform
+    temporal:
+      keys:
+        real:
+          dim: 100
+          init: xavier_uniform
 #        imag:
 #          dim: 100
 #          init: xavier_uniform
 
   fusion:
-    type: diachronic_entity_fusion
+    type: addition_fusion
     target:
-      - 'ent+temp'
+      - 'rel+temp'
     args: ~
   transformation:
     type: translation_tf
