--- a/config-tatranse-paper-1.yaml
+++ b/config-tatranse-paper-1.yaml
@@ -1,12 +1,13 @@
 console:
   quiet: False
-  folder: /mnt/data1/ma/gengyuan/experiment/logging
+  execution_dir: /mnt/data1/ma/gengyuan/experiment/results
   format: {}
 
 task:
   type: train
   device: cuda
-  reciprocal_relation: False
+  devices: [0, 1]
+  reciprocal_training: False
 
 random_seed:
   default: -1
@@ -37,13 +38,14 @@ dataset:
 ## MODEL #######################################################################
 
 model:
-  name: ta_transe
+  type: ta_transe
   emb_dim: 100
   l1_flag: True
   dropout: 0.0
+  args: ~
 
 negative_sampling:
-  name: time_agnostic
+  type: time_agnostic
   num_samples: 500
   filter: False
   as_matrix: True
@@ -58,9 +60,10 @@ train:
   type: negative_sampling
   loss:
     type: cross_entropy_loss
+    args: ~
   max_epochs: 500
   batch_size: 64
-  subbatch_size: -1 # default: no subbatches TODO implement subbatches / chunks
+  sub_batch_size: -1 # default: no subbatches TODO implement subbatches / chunks
   subbatch_auto_tune: False
   optimizer:
     type: Adam
@@ -75,6 +78,7 @@ train:
     split: test # in [test or valid]
     every: 5
     batch_size: 16
+    sub_batch_size: ~
     filter: time-aware  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
@@ -85,10 +89,9 @@ train:
       p: 2
       dim: 1
       maxnorm: 1
-  lr_scheduler:
-    +++: +++
-  lr_scheduler_args:
-    +++: +++
+      args: ~
+  lr_scheduler: ~
+  lr_scheduler_args: ~
   trace_level: epoch           # batch, epoch
   checkpoint:
     folder: /mnt/data1/ma/gengyuan/experiment/ckpt
