--- a/config-ttranse-paper-1.yaml
+++ b/config-ttranse-paper-1.yaml
@@ -5,7 +5,7 @@ console:
 
 task:
   type: train
-  device: cuda
+  device: cpu
   devices: [0, 1]
   reciprocal_training: False
 
@@ -25,8 +25,8 @@ dataset:
   filter: FALSE
   temporal:
     resolution: day  #deprecated
-    index: True
-    float: False
+    index: False
+    float: True
   args: ~
   name: icews14
   num_entities: -1
