--- a/config-tntcomplexe.yaml
+++ b/config-tntcomplexe.yaml
@@ -4,7 +4,6 @@
 console:
   # If set, no console output is produced
   quiet: False
-  folder: /home/ubuntu/gengyuan/logging/tntcomplex
 
   # Formatting of trace entries for console output after certain events, such as
   # finishing an epoch. Each entry is a key-value pair, where the key refers to
@@ -21,9 +20,13 @@ console:
   #   eval_epoch: 'f"{config.get(''eval.type'')}: epoch={epoch:3d} {config.get(''valid.metric'')}={trace[config.get(''valid.metric'')]:.4E} time={epoch_time:.2f}"'
   format: {}
 
+  echo: True
+  log_level: info
+
 
 # Job-level configuration options.
 task:
+  folder: /home/ubuntu/gengyuan/experiments
   # Type of job to run. Possible values are "train", "eval", and "search". See
   # the corresponding configuration keys for mode information.
   type: train
