--- a/config-hpo-template.yaml
+++ b/config-hpo-template.yaml
@@ -29,8 +29,8 @@ dataset:
   filter: False
   temporal:
     resolution: "day"
-    index: False
-    float: True
+    index: True
+    float: False
   args: ~
 
   name: 'icews14'
@@ -53,57 +53,30 @@ model:
   p: 0.4
 
   embedding:
+    global:
+      dim: 160
+      init: xavier_uniform
+
     entity:
       pos_aware: True
       keys:
-#        real:
-#          dim: 160
-#          init: xavier_uniform
-        ent_embs:
-          dim: 108
+        real:
+          dim: 160
           init: xavier_uniform
-        amps_y:
-          dim: 52
-          init: xavier_uniform
-        amps_m:
-          dim: 52
-          init: xavier_uniform
-        amps_d:
-          dim: 52
-          init: xavier_uniform
-        freq_y:
-          dim: 52
-          init: xavier_uniform
-        freq_m:
-          dim: 52
-          init: xavier_uniform
-        freq_d:
-          dim: 52
-          init: xavier_uniform
-        phi_y:
-          dim: 52
-          init: xavier_uniform
-        phi_m:
-          dim: 52
-          init: xavier_uniform
-        phi_d:
-          dim: 52
-          init: xavier_uniform
-
     relation:
       keys:
         real:
           dim: 160
           init: xavier_uniform
-    temporal: ~
-#      keys:
-#        real:
-#          dim: 160
-#          init: xavier_uniform
+    temporal:
+      keys:
+        real:
+          dim: 160
+          init: xavier_uniform
   fusion:
-    type: diachronic_entity_fusion
+    type: elementwise_product_fusion
     target:
-      - 'ent+temp'
+      - 'rel+temp'
     l1_flag: True
     p: 0.4
     emb_dim: 160
@@ -193,5 +166,20 @@ eval:
   ordering: descending
   preference: optimistic
   k: [1,3,10]
+
+
+hpo:
+  num_workers: -1
+  hyperparam:
+    - name: x1
+      type: range
+      bounds: [0.0, 1.0]
+      value_type: float
+    - name: x2
+      type: range
+      bounds: [0.0, 1.0]
+    - name: x3
+      type: choice
+      values: ["foo", "bar"]
 
 
