--- a/config-pipeline-translation.yaml
+++ b/config-pipeline-translation.yaml
@@ -29,8 +29,8 @@ dataset:
   filter: False
   temporal:
     resolution: "day"
-    index: False
-    float: True
+    index: True
+    float: False
   args: ~
 
   name: 'icews14'
@@ -56,54 +56,55 @@ model:
     entity:
       pos_aware: True
       keys:
-#        real:
-#          dim: 160
+        real:
+          dim: 160
+          init: xavier_uniform
+#        ent_embs:
+#          dim: 108
 #          init: xavier_uniform
-        ent_embs:
-          dim: 108
-          init: xavier_uniform
-        amps_y:
-          dim: 52
-          init: xavier_uniform
-        amps_m:
-          dim: 52
-          init: xavier_uniform
-        amps_d:
-          dim: 52
-          init: xavier_uniform
-        freq_y:
-          dim: 52
-          init: xavier_uniform
-        freq_m:
-          dim: 52
-          init: xavier_uniform
-        freq_d:
-          dim: 52
-          init: xavier_uniform
-        phi_y:
-          dim: 52
-          init: xavier_uniform
-        phi_m:
-          dim: 52
-          init: xavier_uniform
-        phi_d:
-          dim: 52
-          init: xavier_uniform
+#        amps_y:
+#          dim: 52
+#          init: xavier_uniform
+#        amps_m:
+#          dim: 52
+#          init: xavier_uniform
+#        amps_d:
+#          dim: 52
+#          init: xavier_uniform
+#        freq_y:
+#          dim: 52
+#          init: xavier_uniform
+#        freq_m:
+#          dim: 52
+#          init: xavier_uniform
+#        freq_d:
+#          dim: 52
+#          init: xavier_uniform
+#        phi_y:
+#          dim: 52
+#          init: xavier_uniform
+#        phi_m:
+#          dim: 52
+#          init: xavier_uniform
+#        phi_d:
+#          dim: 52
+#          init: xavier_uniform
 
     relation:
       keys:
         real:
           dim: 160
           init: xavier_uniform
-    temporal: ~
-#      keys:
-#        real:
-#          dim: 160
-#          init: xavier_uniform
+    temporal:
+      keys:
+        real:
+          dim: 160
+          init: xavier_uniform
   fusion:
-    type: diachronic_entity_fusion
+    type: reproject_fusion
     target:
       - 'ent+temp'
+      - 'rel+temp'
     l1_flag: True
     p: 0.4
     emb_dim: 160
