--- a/config-ttranse-yago15k-index-paper.yaml
+++ b/config-ttranse-yago15k-index-paper.yaml
@@ -1,9 +1,11 @@
 console:
+  log_level: debug
   quiet: False
-  execution_dir: /mnt/data1/ma/gengyuan/experiment/results
   format: {}
+  echo: True
 
 task:
+  folder: /mnt/data1/ma/gengyuan/experiment/results1
   type: train
   device: cuda:1
   devices: [1]
@@ -63,7 +65,7 @@ train:
     args: ~
   max_epochs: 500
   batch_size: 512
-  sub_batch_size: -1
+  subbatch_size: 64
   subbatch_auto_tune: False
   optimizer:
     type: Adam
@@ -78,7 +80,7 @@ train:
     split: test # in [test or valid]
     every: 5
     batch_size: 64
-    sub_batch_size: ~
+    subbatch_size: ~
     filter: time-aware  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
