--- a/config-hpo-hadamardsimple.yaml
+++ b/config-hpo-hadamardsimple.yaml
@@ -6,10 +6,10 @@ console:
 
 #local
 task:
-  folder: /home/ubuntu/gengyuan/experiments
+  folder: /home/ubuntu/gengyuan/search_experiments
   type: train
   device: 'cuda'
-  reciprocal_training: False
+  reciprocal_training: true
 
 random_seed:
   default: -1
@@ -48,36 +48,38 @@ negative_sampling:
 
 
 model:
-  type: translation_simple_model
+  type: pipeline_model
 
   p: 0.4
 
-
   embedding:
     global:
-      dim: -1
+      dim: 160
       init: xavier_uniform
+
     entity:
       pos_aware: True
       keys:
         real:
-          dim: 1600
+          dim: 160
           init: xavier_uniform
-
     relation:
       keys:
         real:
-          dim: 1600
+          dim: 160
           init: xavier_uniform
     temporal:
       keys:
         real:
-          dim: 1600
+          dim: 160
           init: xavier_uniform
   fusion:
-    type: addition_fusion
+    type: elementwise_product_fusion
     target:
       - 'rel+temp'
+    l1_flag: True
+    p: 0.4
+    emb_dim: 160
     args: ~
   transformation:
     type: translation_tf
@@ -91,16 +93,17 @@ model:
   args: ~
 
 
+
 train:
   # Split used for training (specified under 'data.files').
   split: train
   type: negative_sampling
 
   loss:
-    type: cross_entropy_loss
+    type: binary_cross_entropy_loss
     args: ~
 
-  max_epochs: 500
+  max_epochs: 15
 
 
   loader:
@@ -111,8 +114,8 @@ train:
 
   valid:
     split: test # in [test or valid]
-    every: 10
-    batch_size: 100
+    every: 5
+    batch_size: 8
     subbatch_size: -1
     filter: time-aware  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
@@ -126,15 +129,24 @@ train:
     args:
       lr: 0.001
 
+    default:
+      type: Adam           # sgd, adagrad, adam
+
+      args:
+        +++: +++
 
   regularizer:
-    lambda3:
+    entity_reg:
       type: lambda3_regularize
-      weight: 1e-2
+      weight: 0.01
       args: ~
-    n3:
+    relation_reg:
+      type: lambda3_regularize
+      weight: 0.01
+      args: ~
+    temporal_reg:
       type: n3_regularize
-      weight: 1e-2
+      weight: 0.01
       args: ~
   inplace_regularizer: ~
 
@@ -146,8 +158,7 @@ train:
   trace_level: epoch           # batch, epoch
 
   checkpoint:
-    folder: /home/ubuntu/gengyuan/ckpt/
-    every: 10
+    every: 5
     keep: 3
 
   auto_correct: False
@@ -159,5 +170,48 @@ eval:
   ordering: descending
   preference: optimistic
   k: [1,3,10]
+
+
+hpo:
+  num_workers: -1
+  num_trials: 30
+  hyperparam:
+    - name: model.embedding.global.dim
+      type: choice
+      values: [2048, 1024, 512, 256, 128]
+      value_type: int
+    - name: model.embedding.global.init
+      type: choice
+      values: ['xavier_uniform', 'xavier_normal']
+      value_type: str
+    - name: train.regularizer.entity_reg.type
+      type: choice
+      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
+      value_type: str
+    - name: train.regularizer.entity_reg.weight
+      type: range
+      bounds: [0.0, 0.1]
+      value_type: float
+    - name: train.regularizer.relation_reg.type
+      type: choice
+      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
+      value_type: str
+    - name: train.regularizer.relation_reg.weight
+      type: range
+      bounds: [0.0, 0.1]
+      value_type: float
+    - name: train.regularizer.temporal_reg.weight
+      type: range
+      bounds: [0.0, 0.1]
+      value_type: float
+    - name: train.batch_size
+      type: choice
+      values: [256, 512, 1024]
+      value_type: int
+    - name: train.optimizer.args.lr
+      type: range
+      bounds: [0.0000001, 0.01]
+      value_type: float
+
 
 
