--- a/config-hpo-dedistmult-gpei.yaml
+++ b/config-hpo-dedistmult-gpei.yaml
@@ -106,7 +106,7 @@ model:
     se: 0.32
     args: ~
   transformation:
-    type: translation_tf
+    type: distmult_tf
     gamma: 100
     p: 1
     range: 10
