--- a/config-pipeline-translation_test.yaml
+++ b/config-pipeline-translation_test.yaml
@@ -1,8 +1,9 @@
 console:
   quiet: False
   format: {}
-  echo: True
   log_level: info
+  log_format: "%(asctime)s.%(msecs)03d - %(levelname)-8s - %(name)-30s - %(message)s (%(filename)s:%(lineno)s)"
+  echo: True
 
 #local
 task:
