--- a/config-pipeline.yaml
+++ b/config-pipeline.yaml
@@ -2,6 +2,9 @@ console:
   quiet: False
   folder: /home/ubuntu/gengyuan/logging/pipeline
   format: {}
+  log_level: info
+  log_format: "%(asctime)s.%(msecs)03d - %(levelname)-8s - %(name)-30s - %(message)s (%(filename)s:%(lineno)s)"
+  echo: True
 
 #local
 task:
