--- a/config-search.yaml
+++ b/config-search.yaml
@@ -4,6 +4,15 @@ console:
   folder: /Users/GengyuanMax/workplace/logging/tcomplex
   format: {}
 
+  # notset, debug, info, warning, error, critical; see https://docs.python.org/3/library/logging.html#logging-levels
+  log_level: info
+
+  # Custom formatting of the log messages, see https://docs.python.org/3/library/logging.html#logrecord-attributes
+  log_format: "%(asctime)s.%(msecs)03d - %(levelname)-8s - %(name)-30s - %(message)s (%(filename)s:%(lineno)s)"
+
+  # print on console or not
+  echo: True
+
 #local
 task:
   type: search
