--- a/config-hpo-desimple-gpei.yaml
+++ b/config-hpo-desimple-gpei.yaml
@@ -127,7 +127,7 @@ train:
     type: binary_cross_entropy_loss
     args: ~
 
-  max_epochs: 15
+  max_epochs: 100
 
 
   loader:
@@ -144,6 +144,12 @@ train:
     filter: time-aware  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
+
+    early_stopping:
+      early_stop: True
+      patience: 30
+      epochs: 50
+      metric_thresh: 0.1
 
   batch_size: 512
   subbatch_size: 64
@@ -182,7 +188,7 @@ train:
   trace_level: epoch           # batch, epoch
 
   checkpoint:
-    every: 5
+    every: 50
     keep: 3
 
   auto_correct: False
@@ -205,10 +211,10 @@ hpo:
       type: choice
       values: [2048, 1024, 512, 256, 128, 100]
       value_type: int
-    - name: train.batch_size
-      type: choice
-      values: [256, 512, 1024]
-      value_type: int
+#    - name: train.batch_size
+#      type: choice
+#      values: [256, 512, 1024]
+#      value_type: int
     - name: train.optimizer.args.lr
       type: range
       bounds: [0.0000001, 0.01]
