--- a/config-pipeline-bochner-simple.yaml
+++ b/config-pipeline-bochner-simple.yaml
@@ -120,6 +120,12 @@ train:
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
 
+    early_stopping:
+      early_stop: True
+      patience: 30
+      epochs: 100
+      metric_thresh: 0.1
+
   batch_size: 512
   subbatch_size: 64
   subbatch_adaptive: False
