--- a/config-pipeline-simple.yaml
+++ b/config-pipeline-simple.yaml
@@ -61,18 +61,18 @@ model:
       pos_aware: True
       keys:
         real:
-          dim: 1600
+          dim: 100
           init: xavier_uniform
 
     relation:
       keys:
         real:
-          dim: 1600
+          dim: 100
           init: xavier_uniform
     temporal:
       keys:
         real:
-          dim: 1600
+          dim: 100
           init: xavier_uniform
   fusion:
     type: addition_fusion
@@ -117,6 +117,12 @@ train:
     filter: time-aware  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
     k: [1, 3, 10]
+
+    early_stopping:
+      early_stop: True
+      patience: 30
+      epochs: 100
+      metric_thresh: 0.1
 
   batch_size: 512
   subbatch_size: 64
