--- a/search_config/config-hpo-extended-bochner-simple.yaml
+++ b/search_config/config-hpo-extended-bochner-simple.yaml
@@ -9,7 +9,7 @@ task:
   folder: /home/ubuntu/gengyuan/search_experiments
   type: train
   device: 'cuda'
-  reciprocal_training: true
+  reciprocal_training: True
 
 random_seed:
   default: -1
@@ -48,34 +48,35 @@ negative_sampling:
 
 
 model:
-  type: pipeline_model
+  type: extended_bochner_pipeline_dropout_model
 
   embedding:
     global:
-      dim: 160
+      dim: 128
       init: xavier_uniform
-
+      t_min: 1
+      t_max: 365
     entity:
       pos_aware: True
       keys:
         real:
-          dim: 160
+          dim: 128
           init: xavier_uniform
+
     relation:
       keys:
         real:
-          dim: 160
+          dim: 128
           init: xavier_uniform
     temporal:
       keys:
         real:
-          dim: 160
+          dim: 1600 # should have no effect
           init: xavier_uniform
   fusion:
-    type: addition_fusion
+    type: elementwise_product_fusion
     target:
       - 'rel+temp'
-    p: 0.4
     args: ~
   transformation:
     type: translation_tf
@@ -89,7 +90,6 @@ model:
   args: ~
 
 
-
 train:
   # Split used for training (specified under 'data.files').
   split: train
@@ -100,6 +100,7 @@ train:
     args: ~
 
   max_epochs: 100
+
 
   loader:
     num_workers: 0
@@ -130,11 +131,6 @@ train:
     args:
       lr: 0.001
 
-    default:
-      type: Adam           # sgd, adagrad, adam
-
-      args:
-        +++: +++
 
   regularizer:
     entity_reg:
@@ -143,10 +139,6 @@ train:
       args: ~
     relation_reg:
       type: lambda3_regularize
-      weight: 0.01
-      args: ~
-    temporal_reg:
-      type: n3_regularize
       weight: 0.01
       args: ~
   inplace_regularizer: ~
@@ -180,15 +172,15 @@ hpo:
   hyperparam:
     - name: model.embedding.global.dim
       type: choice
-      values: [512, 256, 128, 100, 64]
+      values: [1024, 512, 256, 128, 64]
       value_type: int
-#    - name: model.embedding.global.init
-#      type: choice
-#      values: ['xavier_uniform', 'xavier_normal']
-#      value_type: str
+    - name: model.embedding.global.init
+      type: choice
+      values: ['xavier_uniform', 'xavier_normal']
+      value_type: str
     - name: train.regularizer.entity_reg.type
       type: choice
-      values: ['f2_regularize', 'lambda3_regularize']
+      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
       value_type: str
     - name: train.regularizer.entity_reg.weight
       type: range
@@ -196,13 +188,9 @@ hpo:
       value_type: float
     - name: train.regularizer.relation_reg.type
       type: choice
-      values: ['f2_regularize', 'lambda3_regularize']
+      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
       value_type: str
     - name: train.regularizer.relation_reg.weight
-      type: range
-      bounds: [0.0, 0.1]
-      value_type: float
-    - name: train.regularizer.temporal_reg.weight
       type: range
       bounds: [0.0, 0.1]
       value_type: float
@@ -211,9 +199,6 @@ hpo:
       bounds: [0.0000001, 0.01]
       value_type: float
     - name: model.fusion.p
-      type: choice
-      values: [0.0, 0.2, 0.4, 0.5, 0.6]
+      type: range
+      bounds: [0.0, 0.6]
       value_type: float
-
-
-
