--- a/search_config/config-hpo-extended-bochner-simple.yaml
+++ b/search_config/config-hpo-extended-bochner-simple.yaml
@@ -134,12 +134,12 @@ train:
 
   regularizer:
     entity_reg:
-      type: lambda3_regularize
-      weight: 0.01
+      type: none_regularize
+      weight: 0.0
       args: ~
     relation_reg:
-      type: lambda3_regularize
-      weight: 0.01
+      type: none_regularize
+      weight: 0.0
       args: ~
   inplace_regularizer: ~
 
@@ -172,33 +172,41 @@ hpo:
   hyperparam:
     - name: model.embedding.global.dim
       type: choice
-      values: [1024, 512, 256, 128, 64]
+      values: [2048, 1024, 512, 256, 128, 64]
       value_type: int
     - name: model.embedding.global.init
       type: choice
       values: ['xavier_uniform', 'xavier_normal']
       value_type: str
-    - name: train.regularizer.entity_reg.type
-      type: choice
-      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
-      value_type: str
-    - name: train.regularizer.entity_reg.weight
-      type: range
-      bounds: [0.0, 0.1]
-      value_type: float
-    - name: train.regularizer.relation_reg.type
-      type: choice
-      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
-      value_type: str
-    - name: train.regularizer.relation_reg.weight
-      type: range
-      bounds: [0.0, 0.1]
-      value_type: float
+#    - name: train.regularizer.entity_reg.type
+#      type: choice
+#      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
+#      value_type: str
+#    - name: train.regularizer.entity_reg.weight
+#      type: range
+#      bounds: [0.0, 0.1]
+#      value_type: float
+#    - name: train.regularizer.relation_reg.type
+#      type: choice
+#      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
+#      value_type: str
+#    - name: train.regularizer.relation_reg.weight
+#      type: range
+#      bounds: [0.0, 0.1]
+#      value_type: float
     - name: train.optimizer.args.lr
       type: range
       bounds: [0.0000001, 0.01]
       value_type: float
     - name: model.fusion.p
-      type: range
-      bounds: [0.0, 0.6]
+      type: choice
+      values: [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6]
       value_type: float
+    - name: task.reciprocal_training
+      type: choice
+      values: [true, false]
+      value_type: bool
+    - name: train.loss.type
+      type: choice
+      values: ['binary_cross_entropy_loss', 'cross_entropy_loss']
+      value_type: str
